created style.css and modified file

--- a/my_portfolio/About/contact.html
+++ b/my_portfolio/About/contact.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contect</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>My Contect Details</h1>
+    <h1 class="head">My Contect Details</h1>
     <p>Phone Number:-+94 717667755</p>
     <p>E-mail:- mhdakeel7755@gmail.com</p>
     <p>Address:- Kalawewa, Vijithapura.</p>
