--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
+     
 </head>
 <body>
-    <h1>Muhammad Akeel</h1>
-    <P>Artificial Intelligence & Software Developer</P>
-    <img src="C:\xampp\htdocs\my_portfolio\AKEEL.jpg" alt="Akeel Image" height="100"><br/>
+   <h1>MUHAMMAD AKEEL</h1>
+    <P class="head">Artificial Intelligence & Software Developer</P>
+    <img src="./Akeel.png" alt="Akeel Image" height="100"><br/><br/>
     
     <a href="./About/about_me.html">About Me</a> |
     <a href="./About/project.html">Project</a> |
