--- a/my_portfolio/About/about_me.html
+++ b/my_portfolio/About/about_me.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>About Me</h1>
-    <p>I am a beginner Artificial Intelligence student with a growing interest in machine learning, data analysis, and deep learning.
+    <h1 class="head">About Me</h1>
+    <p class="about_me">I am a beginner Artificial Intelligence student with a growing interest in machine learning, data analysis, and deep learning.
        I enjoy learning how AI can solve real-world problems and I am currently building my foundation in Python, mathematics, and algorithms.</p>
 
     <p>As I continue my studies, I am exploring tools such as scikit-learn, TensorFlow, and PyTorch, while working on small projects to strengthen my practical skills.
