--- a/my_portfolio/About/project.html
+++ b/my_portfolio/About/project.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Projects</h1>
+    <h1 class="head">Projects</h1>
     <ol>
         <li><a href="./project file/HTML birthday invite project/birthday invite project.html">Birthday Invite Project</a></li>
         <img src="./project file/HTML birthday invite project/birthday invite.png" alt="Birthday invitation img" height="100"/>
