modified my_portfolio.html and style.css

--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -8,29 +8,30 @@
      
 </head>
 <body>
-   <h1>MUHAMMAD AKEEL</h1>
-    <P class="head">Artificial Intelligence & Software Developer</P>
-    <img src="./Akeel.png" alt="Akeel Image" height="100"><br/><br/>
+   <div>
+      <div><h1>MUHAMMAD AKEEL</h1></div>
+      <P class="head">Artificial Intelligence & Software Developer</P>
+      <img src="./Akeel.png" alt="Akeel Image" height="100"><br/><br/>
     
-    <a href="./About/about_me.html">About Me</a> |
-    <a href="./About/project.html">Project</a> |
-    <a href="./About/contact.html">Contact</a>
-    <hr/>
+      <a href="./About/about_me.html">About Me</a> |
+      <a href="./About/project.html">Project</a> |
+      <a href="./About/contact.html">Contact</a>
+      <hr/>
 
-    <h2>Summary</h2>
-    <p>My goal is to develop my knowledge step by step and grow into a skilled AI professional 
+      <h2>Summary</h2>
+      <p>My goal is to develop my knowledge step by step and grow into a skilled AI professional 
         who can contribute to innovative and impactful AI solutions.</p>
-     <hr/>
+      <hr/>
 
-     <h2>Education</h2>
-     <ul>
+      <h2>Education</h2>
+      <ul>
         <li>Bachelor of Information Technology (External) - Reading.</li>
         <li>Studying: Artificial Intelligence at Mars Tech Collage.</li>
-     </ul>
-     <hr/>
+      </ul>
+      <hr/>
 
-     <h2>Skills</h2>
-     <ul>
+      <h2>Skills</h2>
+      <ul>
         <h4>Programming & Tools</h4>
         <li>Python (Numpy, Pandas, Matplotlib)</li>
         <li>Scikit-learn (Machine Learning basics)</li>
@@ -38,12 +39,13 @@
         <li>Jupyter Notebook</li>
         <li>HTML</li>
         <li>Visual Studio Code</li>
-     </ul>
-     <hr>
+      </ul>
+      <hr>
 
-     <footer>
-    <p>© Muhammad Akeel. All rights reserved.</p>
-     </footer>
-
+      <footer>
+      <p>© Muhammad Akeel. All rights reserved.</p>
+      </footer>
+   </div>
+   
 </body>    
 </html>
