--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -1,51 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
-     
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Caveat&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+
 <body>
-   <div>
-      <div><h1>MUHAMMAD AKEEL</h1></div>
-      <P class="head">Artificial Intelligence & Software Developer</P>
-      <img src="./Akeel.png" alt="Akeel Image" height="100"><br/><br/>
-    
-      <a href="./About/about_me.html">About Me</a> |
-      <a href="./About/project.html">Project</a> |
-      <a href="./About/contact.html">Contact</a>
-      <hr/>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Portfolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">contect</a>
+          </li>
+        </ul>
 
-      <h2>Summary</h2>
-      <p>My goal is to develop my knowledge step by step and grow into a skilled AI professional 
-        who can contribute to innovative and impactful AI solutions.</p>
-      <hr/>
+      </div>
+    </div>
+  </nav>
 
-      <h2>Education</h2>
-      <ul>
-        <li>Bachelor of Information Technology (External) - Reading.</li>
-        <li>Studying: Artificial Intelligence at Mars Tech Collage.</li>
-      </ul>
-      <hr/>
+  <!-- Home Section -->
 
-      <h2>Skills</h2>
-      <ul>
-        <h4>Programming & Tools</h4>
-        <li>Python (Numpy, Pandas, Matplotlib)</li>
-        <li>Scikit-learn (Machine Learning basics)</li>
-        <li>Machine Learning Algorithms (Linear Regression, Decision Trees, etc.)</li>
-        <li>Jupyter Notebook</li>
-        <li>HTML</li>
-        <li>Visual Studio Code</li>
-      </ul>
-      <hr>
+  <section id="home">
+    <p class="text-center">AI Researcher</p>
+    <p class="text-center">Software Developer</p>
+    <p class="text-center">Web developer</p>
+    <p class="text-center">Freelancer</p>
+  </section>
 
-      <footer>
-      <p>© Muhammad Akeel. All rights reserved.</p>
-      </footer>
-   </div>
-   
-</body>    
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
