--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -27,10 +27,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Skills</a>
@@ -51,14 +51,28 @@
   </nav>
 
   <!-- Home Section -->
-
   <section id="home">
-    <p class="text-center">AI Researcher</p>
-    <p class="text-center">Software Developer</p>
-    <p class="text-center">Web developer</p>
-    <p class="text-center">Freelancer</p>
+    <p class="text-center">AI <span>Researcher</span></p>
+    <p class="text-center">Software <span>Developer</span></p>
+    <p class="text-center">Web <span>Developer</span></p>
+    <p class="text-center">Free<span>lancer</span></p>
   </section>
 
+  <!-- About Section -->
+  <section id="about">
+    <div class="circle">
+      <img src="./Akeel img.png" alt="Akeel img">
+      <div class="content">
+        <h1>About Me</h1>
+        <p>I am an Artificial Intelligence student passionate about building intelligent systems that connect technology
+          with real-world impact.</p>
+        <p>I am eager to learn, collaborate, and contribute to innovative projects while continuously developing my
+          technical and analytical skills.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Skills Section -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
