--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Projects</a>
@@ -73,6 +73,69 @@
   </section>
 
   <!-- Skills Section -->
+  <section id="skills">
+    <h1 class="text-center">My Skills</h1>
+    <div class="container">
+      <div class="row p-lg-3 p-0 mb-lg-3 mb-0">
+        <div class="col-lg-6 col-12 pt-lg-0 pt-3">
+          <label>HTML</label>
+          <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100">
+            <div class="progress-bar" style="width: 85%">85%</div>
+          </div>
+        </div>
+
+
+        <div class="col-lg-6 col-12 pt-lg-0 pt-3">
+          <label>CSS</label>
+          <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100">
+            <div class="progress-bar" style="width: 75%">75%</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row p-lg-3 p-0 mb-lg-3 mb-0">
+        <div class="col-lg-6 col-12 pt-lg-0 pt-3">
+          <label>JavaScript</label>
+          <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100">
+            <div class="progress-bar" style="width: 55%">55%</div>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-12 pt-lg-0 pt-3">
+          <label>Bootstrap</label>
+          <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100">
+            <div class="progress-bar" style="width: 65%">65%</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row p-lg-3 p-0 mb-lg-3 mb-0">
+        <div class="col-lg-6 col-12 pt-lg-0 pt-3">
+          <label>Python</label>
+          <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100">
+            <div class="progress-bar" style="width: 80%">80%</div>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-12 pt-lg-0 pt-3">
+          <label>MySQL</label>
+          <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100">
+            <div class="progress-bar" style="width: 75%">75%</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Project Section -->
+   
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
