--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
@@ -45,7 +45,6 @@
             <a class="nav-link" href="#">contect</a>
           </li>
         </ul>
-
       </div>
     </div>
   </nav>
@@ -134,7 +133,41 @@
   </section>
 
   <!-- Project Section -->
-   
+   <section id="projects">
+    <div id="carouselExampleIndicators" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./About/project file/Ecommerce website img.png" class="d-block w-100" alt="Ecommerce website img">
+    </div>
+    <div class="carousel-item">
+      <img src="./About/project file/portfolio project img.png" class="d-block w-100" alt="portfolio project img">
+    </div>
+    <div class="carousel-item">
+      <img src="./About/project file/Responsive website img.png" class="d-block w-100" alt="Responsive website img.png">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+   </section>
+
+   <!-- Pricing Section -->
+    <section id="pricing">
+      <div>
+
+      </div>
+    </section>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
