--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -133,41 +133,109 @@
   </section>
 
   <!-- Project Section -->
-   <section id="projects">
+  <section id="projects">
     <div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="./About/project file/Ecommerce website img.png" class="d-block w-100" alt="Ecommerce website img">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./About/project file/Ecommerce website img.png" class="d-block w-100" alt="Ecommerce website img">
+        </div>
+        <div class="carousel-item">
+          <img src="./About/project file/portfolio project img.png" class="d-block w-100" alt="portfolio project img">
+        </div>
+        <div class="carousel-item">
+          <img src="./About/project file/Responsive website img.png" class="d-block w-100"
+            alt="Responsive website img.png">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="carousel-item">
-      <img src="./About/project file/portfolio project img.png" class="d-block w-100" alt="portfolio project img">
-    </div>
-    <div class="carousel-item">
-      <img src="./About/project file/Responsive website img.png" class="d-block w-100" alt="Responsive website img.png">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-   </section>
+  </section>
 
-   <!-- Pricing Section -->
-    <section id="pricing">
-      <div>
+  <!-- Pricing Section -->
+  <section id="pricing">
+    <div class="container text-center">
+      <h1 class="display-4">Pricing</h1>
+      <div class="row row-cols-1 row-cols-md-3">
+        <div class="col">
+          <div class="card">
+            <div class="card-header">
+              <h4>GOLD</h4>
+            </div>
+
+            <div class="card-body">
+              <h1>$5/<span class="text-muted">month</span></h1>
+              <ul class="list-unstyled">
+                <li>Including 5 pages</li>
+                <li>Free Source Code</li>
+                <li>Responsive Designs</li>
+                <li>5 Days Delivery</li>
+              </ul>
+              <button class="btn btn-primary px-5">Contact</button>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card">
+            <div class="card-header">
+              <h4>DIAMOND</h4>
+            </div>
+
+            <div class="card-body">
+              <h1>$10/<span class="text-muted">month</span></h1>
+              <ul class="list-unstyled">
+                <li>Including 10 pages</li>
+                <li>Free Source Code</li>
+                <li>Responsive Designs</li>
+                <li>3 Days Delivery</li>
+              </ul>
+              <button class="btn btn-primary px-5">Contact</button>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card">
+            <div class="card-header">
+              <h4>PLATINUM</h4>
+            </div>
+
+            <div class="card-body">
+              <h1>$15/<span class="text-muted">month</span></h1>
+              <ul class="list-unstyled">
+                <li>Including 15 pages</li>
+                <li>Free Source Code</li>
+                <li>Responsive Designs</li>
+                <li>1 Days Delivery</li>
+              </ul>
+              <button class="btn btn-primary px-5">Contact</button>
+            </div>
+
+          </div>
+        </div>
 
       </div>
-    </section>
+    </div>
+  </section>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
