--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -39,10 +39,10 @@
             <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#pricing">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">contect</a>
+            <a class="nav-link" href="#contact">contact</a>
           </li>
         </ul>
       </div>
@@ -233,6 +233,40 @@
           </div>
         </div>
 
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <div class="container mb-5">
+      <h1 class="text-center">Contact US</h1>
+      <div class="row">
+        <div class="col-lg-6 col-12">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7901.52381727598!2d80.52331963537473!3d8.023468541871553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sqa!4v1759173396730!5m2!1sen!2sqa"
+            width="450" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="col-lg-6 col-12">
+          <form>
+            <div class="mb-3">
+              <label class="form-label">Username</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label">Email Address</label>
+              <input type="email" class="form-control">
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label">Enter Your Message</label>
+              <textarea class="form-control" rows="6"></textarea>
+            </div>
+            <button class="btn btn-primary">Send A Message</button>
+          </form>
+        </div>
       </div>
     </div>
   </section>
