modified my_portfolio.html and style.css

--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#pricing">Pricing</a>
+            <a class="nav-link" href="#Certifications">Certifications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -168,26 +168,24 @@
     </div>
   </section>
 
-  <!-- Pricing Section -->
-  <section id="pricing">
+  <!-- Certifications Section -->
+  <section id="Certifications">
     <div class="container text-center">
-      <h1 class="display-4">Pricing</h1>
+      <h1 class="display-4">Certifications</h1>
       <div class="row row-cols-1 row-cols-md-3">
         <div class="col">
           <div class="card">
             <div class="card-header">
-              <h4>GOLD</h4>
+              <h4> FRONT END DEVELOPMENT</h4>
             </div>
 
             <div class="card-body">
-              <h1>$5/<span class="text-muted">month</span></h1>
+
               <ul class="list-unstyled">
-                <li>Including 5 pages</li>
-                <li>Free Source Code</li>
-                <li>Responsive Designs</li>
-                <li>5 Days Delivery</li>
+                <li>I create responsive, user friendly websites using HTML, CSS, and JavaScript.
+                  I focus on clean design, smooth interactions, and fast performance.</li>
               </ul>
-              <button class="btn btn-primary px-5">Contact</button>
+              <button class="btn btn-primary px-5">Check Here</button>
             </div>
 
           </div>
@@ -196,18 +194,18 @@
         <div class="col">
           <div class="card">
             <div class="card-header">
-              <h4>DIAMOND</h4>
+              <h4>COMPUTER HARDWARE</h4>
             </div>
 
             <div class="card-body">
-              <h1>$10/<span class="text-muted">month</span></h1>
+
               <ul class="list-unstyled">
-                <li>Including 10 pages</li>
-                <li>Free Source Code</li>
-                <li>Responsive Designs</li>
-                <li>3 Days Delivery</li>
+                <li>I build, repair, and optimize computer systems.
+                  Passionate about keeping hardware running at its best. Focused on performance, reliability, and
+                  efficiency.</li>
+
               </ul>
-              <button class="btn btn-primary px-5">Contact</button>
+              <button class="btn btn-primary px-5">Check Here</button>
             </div>
 
           </div>
@@ -216,18 +214,17 @@
         <div class="col">
           <div class="card">
             <div class="card-header">
-              <h4>PLATINUM</h4>
+              <h4>INTRODUCTION TO MODERN AI</h4>
             </div>
 
             <div class="card-body">
-              <h1>$15/<span class="text-muted">month</span></h1>
+
               <ul class="list-unstyled">
-                <li>Including 15 pages</li>
-                <li>Free Source Code</li>
-                <li>Responsive Designs</li>
-                <li>1 Days Delivery</li>
+                <li>Exploring the world of Modern Artificial Intelligence.
+                  Focused on machine learning, data, and intelligent automation. I study and apply modern AI concepts.
+                </li>
               </ul>
-              <button class="btn btn-primary px-5">Contact</button>
+              <button class="btn btn-primary px-5">Check Here</button>
             </div>
 
           </div>
