--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -180,12 +180,18 @@
             </div>
 
             <div class="card-body">
-
               <ul class="list-unstyled">
-                <li>I create responsive, user friendly websites using HTML, CSS, and JavaScript.
-                  I focus on clean design, smooth interactions, and fast performance.</li>
+                <li>
+                  <strong>I create responsive, user friendly websites using HTML, CSS, and JavaScript.</strong>
+                <li> I turn ideas into interactive, responsive websites.</li>
+                </li>
               </ul>
-              <button class="btn btn-primary px-5">Check Here</button>
+
+              <button class="btn btn-primary">
+                <a href="./Certificates/Introduction to Front End Development.pdf" target="_blank">
+                  View Certificate
+                </a>
+              </button>
             </div>
 
           </div>
@@ -200,37 +206,49 @@
             <div class="card-body">
 
               <ul class="list-unstyled">
-                <li>I build, repair, and optimize computer systems.
-                  Passionate about keeping hardware running at its best. Focused on performance, reliability, and
-                  efficiency.</li>
-
+                <li>
+                  <strong>I build, repair, and optimize computer systems.</strong>
+                <li>Strong performance, Reliable hardware, Smooth operation.
+                  Building. Fixing. Optimizing</li>
+                </li>
               </ul>
-              <button class="btn btn-primary px-5">Check Here</button>
-            </div>
 
+              <button class="btn btn-primary">
+                <a href="./Certificates/Computer Hardware Basics Certificate.pdf" target="_blank">
+                  View Certificate
+                </a>
+              </button>
+            </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card">
             <div class="card-header">
-              <h4>INTRODUCTION TO MODERN AI</h4>
+              <h4>MODERN AI</h4>
             </div>
 
             <div class="card-body">
-
               <ul class="list-unstyled">
-                <li>Exploring the world of Modern Artificial Intelligence.
-                  Focused on machine learning, data, and intelligent automation. I study and apply modern AI concepts.
+                <li>
+                  <strong>Exploring the power of modern Artificial Intelligence.</strong>
+                <li>Learning how machines think and adapt.
+                  I study and apply AI to solve real-world problems.</li>
                 </li>
               </ul>
-              <button class="btn btn-primary px-5">Check Here</button>
-            </div>
 
+              <button class="btn btn-primary">
+                <a href="./Certificates/Introduction to Modern Ai  Certificate.pdf" target="_blank">
+                  View Certificate
+                </a>
+              </button>
+            </div>
           </div>
         </div>
-
       </div>
+    </div>
+
+    </div>
     </div>
   </section>
 
