--- a/my_portfolio/my_portfolio.html
+++ b/my_portfolio/my_portfolio.html
@@ -188,7 +188,7 @@
               </ul>
 
               <button class="btn btn-primary">
-                <a href="./Certificates/Introduction to Front End Development.pdf" target="_blank">
+                <a href="./Certificates/Front-End_Web_Development_E-Certificate.pdf" target="_blank">
                   View Certificate
                 </a>
               </button>
